--- a/SMPC-2019.html
+++ b/SMPC-2019.html
@@ -84,145 +84,182 @@
             </div> 
             </div>
             <div id="speaker">
-                <!--<table>
-                <tbody>
-                    <tr>
-                    <td></td>
-                    <td >主讲人</td>
-                    <td></td>
-                    </tr>
-                    <tr>
-                        <td colspan="2"></td>
-                    </tr>
-                    <tr>
-                        <td>Liqun Chen</td>
-                    <td>( University of Surrey )</td>
-                    </tr>
-                <tr>
-                    <td>Bo Luo </td>
-                    <td>( University of Kansas )</td>
-                </tr>
-                <tr>
-                    <td>Qiang Tang</td>
-                    <td>( New Jersey Institute of Technology )</td>
-                </tr>
-                <tr>
-                    <td>Kazuo Otha</td>
-                    <td>( University of Electro Communications )</td> 
-                </tr>
-                <tr>
-                    <td>XiaoFeng Wang</td>
-                    <td>( Indiana University Bloomington )</td>
-                </tr>
-                <tr>
-                    <td>Robert H.Deng </td>
-                    <td>( Singapore Management University )</td>
-                </tr>
-                <tr>
-                    <td>Yaochu Jin</td>
-                    <td>( University of Surrey )</td>
-                </tr>
-                <tr>
-                    <td>QiuLiang Xu</td>
-                    <td>( Shandong University )</td>
-                </tr>
-                <tr>
-                    <td>ZhenFu Cao </td>
-                    <td>( East China Normal University )</td>
-                </tr>
-                <tr>
-                    <td>Fangguo Zhang</td>
-                    <td>( Sun Yat-sen University )</td>
-                </tr>
-                <tr>
-                    <td>Lei Wang </td>
-                    <td>( Shanghai Jiao Tong University )</td>
-                </tr>
-                <tr id="last-tr">
-                    <td>Fei Gao </td>
-                    <td>( Beijing University of Posts and Telecommunications )</td>
-                </tr>
-                </tbody>
-                
-                </table>-->
             </div> 
             <div class="main2">
             <div id="main2">
-                <div id="contents">
-                    <p>主讲人</p>
-                    <p>(排名顺序不分先后)</p>
-                    <p class="organization">Yan Huang<br/></p>
-                    (University of Virginia)<br/><br/>
-                    <p class="organization">Liqun Chen<br/></p>
-                    (University of Surrey)<br/><br/>
-                    <p class="organization">Bo Luo<br/></p>
-                    (University of Kansas)<br/><br/>
-                    <p class="organization">Qiang Tang<br/></p>
-                    (New Jersey Institute of Technology)<br/><br/>
-                    <p class="organization">kazuo Otha<br/></p>
-                    (University of Electro Communications)<br/><br/>
-                    <p class="organization">XiaoFeng Wang<br/></p>
-                    (Indiana University Bloomington)<br/><br/>
-                    <p class="organization">Chaoping Xing<br/></p>
-                    (Nanyang Technological University)<br/><br/>
-                    <p class="organization">Yaochu Jin<br/></p>
-                    (University of Surrey)<br/><br/>
-                    <p class="organization">QiuLiang Xu<br/></p>
-                    (Shandong University)<br/><br/>
-                    <p class="organization">ZhenFu Cao<br/></p>
-                    ( East China Normal University )<br/><br/>
-                    <p class="organization">Lei Wang <br/></p>
-                    (Shanghai Jiao Tong University)<br/><br/>
-                    <p class="organization ">Fei Gao <br/></p>
-                    (Beijing University of Posts and Telecommunications)<br/>
-                    <br/>
-                    <br/><br/>
-                    <p class="organization">筹备委员会<br/></p>
-                    任奎 王杰 陈克非 林东岱<br/><br/>
-                    <p class="organization">论坛主席<br/></p>
-                    秦湛 张秉晟<br/><br/>
-                    <p class="organization">论坛组织和筹备主席<br/></p>
-                    蒋林智<br/><br/>
-                    <p class="organization">论坛承办单位<br/></p>
-                    浙江大学 网络空间安全研究中心<br/><br/>
-<!--                     <p class="organization">论坛协办单位<br/></p>
-                    University of Surrey SSG <br/>
-                    中国密码学会 密码数学理论专业委员会<br/>
-                    中国保密学会 隐私保护专委会<br/><br/>
-                    </p> -->
-                    <p class="organization">会议举办地点<br/></p>
-                    浙江大学邵逸夫科学馆<br/>
-                    <a href="https://j.map.baidu.com/b0ZKP">
-                        <i class="fa fa-map-marker fa-3x" aria-hidden="true" style="color:red"></i> 
-                    </a>
-                    </p>
-                </div>
-                </div>
+                <div id="contents" class="personnel1">
+                        <p align="center">主讲人</p>
+                                            <p align="center">(排名顺序不分先后)</p>
+                                            <p class="organization" align="center">Yan Huang<br/></p>
+                                            <p align="center">(University of Virginia)<br/></p>
+                                            <p class="organization" align="center">Liqun Chen<br/></p>
+											<p align="center">(University of Surrey)<br/></p>
+                                            <p class="organization" align="center">Bo Luo<br/></p>
+                                            <p align="center">(University of Kansas)<br/></p>
+                                            <p class="organization" align="center">Qiang Tang<br/></p>
+                                            <p align="center">(New Jersey Institute of Technology)<br/></p>
+                                            <p class="organization" align="center">kazuo Otha<br/></p>
+                                            <p align="center">(University of Electro Communications)<br/></p>
+                                            <p class="organization" align="center">XiaoFeng Wang<br/></p>
+                                            <p align="center">(Indiana University Bloomington)<br/></p>
+                                            <p class="organization" align="center">Chaoping Xing<br/></p>
+                                            <p align="center">(Nanyang Technological University)<br/></p>
+                                            <p class="organization" align="center">Yaochu Jin<br/></p>
+                                            <p align="center">(University of Surrey)<br/></p>
+                                            <p class="organization" align="center">QiuLiang Xu<br/></p>
+                                            <p align="center">(Shandong University)<br/></p>
+                                            <p class="organization" align="center">ZhenFu Cao<br/></p>
+                                            <p align="center">( East China Normal University )<br/></p>
+                                            <p class="organization" align="center">Lei Wang <br/></p>
+                                            <p align="center">(Shanghai Jiao Tong University)<br/></p>
+                                            <p class="organization " align="center">Fei Gao <br/></p>
+                                            <p align="center">(Beijing University of Posts and Telecommunications)<br/></p>
+                                            <br/><br/>
+                                            <p class="organization" align="center">筹备委员会<br/></p>
+                                            <p align="center">任奎 王杰 陈克非 林东岱<br/></p>
+                                            <p class="organization" align="center">论坛主席<br/></p>
+                                            <p align="center">秦湛 张秉晟<br/></p>
+                                            <p class="organization" align="center">论坛组织和筹备主席<br/></p>
+                                            <p align="center">蒋林智<br/></p>
+                                            <p class="organization" align="center">论坛承办单位<br/></p>
+                                            <p align="center">浙江大学 网络空间安全研究中心<br/></p>
+                        <!--                     <p class="organization">论坛协办单位<br/></p>
+                                            University of Surrey SSG <br/>
+                                            中国密码学会 密码数学理论专业委员会<br/>
+                                            中国保密学会 隐私保护专委会<br/><br/>
+                                            </p> -->
+                                            <p class="organization" align="center">会议举办地点<br/></p>
+                                            <p align="center">浙江大学邵逸夫科学馆<br/>
+                                            <a href="https://j.map.baidu.com/b0ZKP">
+                                                <i class="fa fa-map-marker fa-3x" aria-hidden="true" style="color:red"></i> 
+                                            </a>
+                                            </p>
+                    </div>
+
+ <div id="contents" class="personnel2">
+    <p align="center">主讲人</p>
+                        <p align="center">(排名顺序不分先后)</p>
+                        <p class="organization" align="center">Yan Huang<br/></p>
+                        <p align="center">(University of Virginia)<br/></p>
+                        <p class="organization" align="center">Liqun Chen<br/></p>
+    					<p align="center">(University of Surrey)<br/></p>
+                        <p class="organization" align="center">Bo Luo<br/></p>
+                        <p align="center">(University of Kansas)<br/></p>
+                        <p class="organization" align="center">Qiang Tang<br/></p>
+                        <p align="center">(New Jersey Institute of Technology)<br/></p>
+                        <p class="organization" align="center">kazuo Otha<br/></p>
+                        <p align="center">(University of Electro Communications)<br/></p>
+                        <p class="organization" align="center">XiaoFeng Wang<br/></p>
+                        <p align="center">(Indiana University Bloomington)<br/></p>
+                        <p class="organization" align="center">Chaoping Xing<br/></p>
+                        <p align="center">(Nanyang Technological University)<br/></p>
+                        <p class="organization" align="center">Yaochu Jin<br/></p>
+                        <p align="center">(University of Surrey)<br/></p>
+                        <p class="organization" align="center">QiuLiang Xu<br/></p>
+                        <p align="center">(Shandong University)<br/></p>
+                        <p class="organization" align="center">ZhenFu Cao<br/></p>
+                        <p align="center">( East China Normal University )<br/></p>
+                        <p class="organization" align="center">Lei Wang <br/></p>
+                        <p align="center">(Shanghai Jiao Tong University)<br/></p>
+                        <p class="organization " align="center">Fei Gao <br/></p>
+                        <p align="center">(Beijing University of Posts and Telecommunications)<br/></p>
+                        <br/><br/>
+                        <p class="organization" align="center">筹备委员会<br/></p>
+                        <p align="center">任奎 王杰 陈克非 林东岱<br/></p>
+                        <p class="organization" align="center">论坛主席<br/></p>
+                        <p align="center">秦湛 张秉晟<br/></p>
+                        <p class="organization" align="center">论坛组织和筹备主席<br/></p>
+                        <p align="center">蒋林智<br/></p>
+                        <p class="organization" align="center">论坛承办单位<br/></p>
+                        <p align="center">浙江大学 网络空间安全研究中心<br/></p>
+    <!--                     <p class="organization">论坛协办单位<br/></p>
+                        University of Surrey SSG <br/>
+                        中国密码学会 密码数学理论专业委员会<br/>
+                        中国保密学会 隐私保护专委会<br/><br/>
+                        </p> -->
+                        <p class="organization" align="center">会议举办地点<br/></p>
+                        <p align="center">浙江大学邵逸夫科学馆<br/>
+                        <a href="https://j.map.baidu.com/b0ZKP">
+                            <i class="fa fa-map-marker fa-3x" aria-hidden="true" style="color:red"></i> 
+                        </a>
+                        </p>
+     </div>
+ <div id="contents" class="personnel3">
+ <p align="center">主讲人</p>
+                     <p align="center">(排名顺序不分先后)</p>
+                     <p class="organization" align="center">Yan Huang<br/></p>
+                     <p align="center">(University of Virginia)<br/></p>
+                     <p class="organization" align="center">Liqun Chen<br/></p>
+ 					<p align="center">(University of Surrey)<br/></p>
+                     <p class="organization" align="center">Bo Luo<br/></p>
+                     <p align="center">(University of Kansas)<br/></p>
+                     <p class="organization" align="center">Qiang Tang<br/></p>
+                     <p align="center">(New Jersey Institute of Technology)<br/></p>
+                     <p class="organization" align="center">kazuo Otha<br/></p>
+                     <p align="center">(University of Electro Communications)<br/></p>
+                     <p class="organization" align="center">XiaoFeng Wang<br/></p>
+                     <p align="center">(Indiana University Bloomington)<br/></p>
+                     <p class="organization" align="center">Chaoping Xing<br/></p>
+                     <p align="center">(Nanyang Technological University)<br/></p>
+                     <p class="organization" align="center">Yaochu Jin<br/></p>
+                     <p align="center">(University of Surrey)<br/></p>
+                     <p class="organization" align="center">QiuLiang Xu<br/></p>
+                     <p align="center">(Shandong University)<br/></p>
+                     <p class="organization" align="center">ZhenFu Cao<br/></p>
+                     <p align="center">( East China Normal University )<br/></p>
+                     <p class="organization" align="center">Lei Wang <br/></p>
+                     <p align="center">(Shanghai Jiao Tong University)<br/></p>
+                     <p class="organization " align="center">Fei Gao <br/></p>
+                     <p align="center">(Beijing University of Posts and Telecommunications)<br/></p>
+                     <br/><br/>
+                     <p class="organization" align="center">筹备委员会<br/></p>
+                     <p align="center">任奎 王杰 陈克非 林东岱<br/></p>
+                     <p class="organization" align="center">论坛主席<br/></p>
+                     <p align="center">秦湛 张秉晟<br/></p>
+                     <p class="organization" align="center">论坛组织和筹备主席<br/></p>
+                     <p align="center">蒋林智<br/></p>
+                     <p class="organization" align="center">论坛承办单位<br/></p>
+                     <p align="center">浙江大学 网络空间安全研究中心<br/></p>
+ <!--                     <p class="organization">论坛协办单位<br/></p>
+                     University of Surrey SSG <br/>
+                     中国密码学会 密码数学理论专业委员会<br/>
+                     中国保密学会 隐私保护专委会<br/><br/>
+                     </p> -->
+                     <p class="organization" align="center">会议举办地点<br/></p>
+                     <p align="center">浙江大学邵逸夫科学馆<br/>
+                     <a href="https://j.map.baidu.com/b0ZKP">
+                         <i class="fa fa-map-marker fa-3x" aria-hidden="true" style="color:red"></i> 
+                     </a>
+                     </p>
+ </div>
+                </div>   
             </div>    
-        		               <div id="main3" >
-		                    <style type="text/css">
-		                        table.tableizer-table {
-		                            border: 1px solid #CCC;
-		                            font-family: Arial, Helvetica, sans-serif;
-					    margin: 1px;
-		                        }
-		                        .tableizer-table td {
-		                            padding: 4px;
-		                            margin: 3px;
-		                            max-width: 500px;
-		                            border: 1px solid #CCC;
-		                        }
-		                        .tableizer-table th {
-		                            background-color: #104E8B;
-		                            padding: 4px;
-		                            margin: 3px;
-		                            max-width: 500px;
-		                            color: #FFF;
-		                            font-weight: bold;
-		                            text-align: center;
-		                        }
-		                    </style>
-		                    <table class="tableizer-table" style="margin-top: -60px;text-align: center;">
+              <div id="main3" >
+                   <style type="text/css">
+                       table.tableizer-table {
+                           border: 1px solid #CCC;
+                           font-family: Arial, Helvetica, sans-serif;
+                           margin: 0 auto;
+						   width: 80%;
+						   height: 100%;
+                       }
+                       .tableizer-table td {
+                           padding: 4px;
+                           margin: 3px;
+                           max-width: 500px;
+                           border: 1px solid #CCC;
+                       }
+                       .tableizer-table th {
+                           background-color: #104E8B;
+                           padding: 4px;
+                           margin: 3px;
+                           max-width: 500px;
+                           color: #FFF;
+                           font-weight: bold;
+                           text-align: center;
+                       }
+                   </style>
+<table class="tableizer-table" style="margin-top: -60px;text-align: center;">
 		                        <thead><tr class="tableizer-firstrow"><th>&nbsp;&nbsp;Data</th><th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Time</th><th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Report</th><th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Invited&nbsp;Speaker</th></tr></thead><tbody>
 		                         <tr><td>6月1日</td><td>&nbsp;7:30 - 8:30</td><td>论坛注册</td><td>&nbsp;</td></tr>
 		                         <tr><td>&nbsp;</td><td>&nbsp;8:30 - 8:45</td><td>论坛合影</td><td>&nbsp;</td></tr>
@@ -253,6 +290,7 @@
 		                         <tr><td>&nbsp;</td><td>18:00 - 20:00</td><td>Dinner</td><td></td></tr>
 		                        </tbody></table>
 		                        	    </br></br>
+        
 
        <div id="main2" >
         <div id="register">
