--- a/SHDI-2019.html
+++ b/SHDI-2019.html
@@ -9,15 +9,15 @@
     <link href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     -->
-    <script src="js/2.1.1/jquery.min.js"></script>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <script src="js/bootstrap.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
+    <link href="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="style.css"/>
-    <link rel="stylesheet" href="introduction-CSAC-2020.css"/>
+    <link rel="stylesheet" href="introduction.css"/>
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
-    <!--    <script src="https://unpkg.com/scrollreveal"></script>-->
+    <script src="https://unpkg.com/scrollreveal"></script>
     <title>SHDI-2019</title>
-    <style type="text/css">
+	<style type="text/css">
 	.navbar-collapse li ul{
 			display:none;
 			height:auto;
@@ -31,62 +31,48 @@
 	.navbar-collapse li:hover ul{
 			display:block;
 		}
-	.section{
-		margin: 0 25%;
-	}
-	.footer4
-	    {
-		    margin-top:10px;
-	    }
-	.removeborder{ 
-		border: none
-		}
-	#theme{
-		margin-top: 20px;
-	}
 	</style>
 </head>
-
 <body background="image/会议背景11.jpg">
-<div >
-    <header style="min-height: 76px;">
-        <nav id="main-nav" class="navbar navbar-inverse" role="navigation">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
-                        <span class="sr-only">切换导航</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <!--                             <a class="navbar-brand" href="index.html"><img alt="安全多方计算国际论坛-2019" src="image/SHDIpic.PNG"></a>  -->
-                </div>
-                <div id="navbar-collapse" class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav navbar-center">
-                        <li><a href="index.html">
-                            <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
-                             <li class="submenu">
+    <div >
+        <header style="min-height: 76px;">
+                <nav id="main-nav" class="navbar navbar-inverse" role="navigation">
+                    <div class="container">
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+                                <span class="sr-only">切换导航</span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+                       <!--     <a class="navbar-brand" href="index.html"><img alt="安全多方计算国际论坛-2019" src="image/logo.png"></a> -->
+                        </div>
+                        <div id="navbar-collapse" class="collapse navbar-collapse">
+                            <ul class="nav navbar-nav navbar-center">
+                                    <li><a href="index.html">
+                                    <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
+                               <li class="submenu">
                                     <a href="News.html">News</a>
                                 </li>
                                 <li class="submenu">
 				<a href="Conference.html">Conferences</a>
 			</li>
-                        <li class="submenu">
-                            <a href="Training-Camp.html">Training Camp</a>
-                        </li>
-                        <li class="submenu">
-                               <a href="Research.html">Research</a>
-                         </li>
-			 <li class="submenu">
-                               <a href="About us Introduction.html">About us</a>
-                        </li>
-                    </ul>
-                </div>
-            </div><!-- /.container-->
-        </nav>
-    </header>
-    <div id="introdution">
-        <div class="introdution">
+                                 <li class="submenu">
+                                    <a href="Training-Camp.html">Training Camp</a>
+                                </li>
+                                <li class="submenu">
+                                    <a href="Research.html">Research</a>
+                                </li>
+				<li class="submenu">
+                                    <a href="About us Introduction.html">About us</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div><!-- /.container-->
+                </nav>
+        </header>    
+        <div id="introdution">
+            <div class="introdution">
             <div id="theme">
                             <p style="text-indent:2em ">随着网络空间安全、人工智能和云计算等领域的快速发展，学术界和工业界构造了大量的理论和应用方案；同时，工业界和用户对相关落地实现系统的需求也在不断快速增长；因此，必须解决相关方案和算法的软件和硬件实现问题；而软件设计理论的逐渐成熟和硬件设计与实现技术的快速发展和产品化，为解决上述问题提供了良好的基础和契机。<br/>
                                 &nbsp; &nbsp; &nbsp; &nbsp;本届论坛将围绕着算法，特别是密码算法的软硬件结构设计与实现展开探讨和交流。论坛将于2019年9月28日-2019年9月29日在桂林举办，由桂林电子科技大学 计算机与信息安全学院承办。论坛邀请了来自香港城市大学、深圳纽创信安科技公司、清华大学、中科院信息工程研究所、武汉大学、杭州加速云科技公司、Intel中国有限公司、百度安全实验室等多位从事软硬件算法设计与实现的专家，将就相关的问题给出14个特邀报告。热烈欢迎国内外高校、研究所、企业界的老师、同仁和研究生等参加论坛交流和讨论。
