--- a/SHDI-2019.html
+++ b/SHDI-2019.html
@@ -248,6 +248,7 @@
 				 <p style="text-align:center"><img src="image/DFSC CENTERlogo.png " style="width:18%; height:18%; margin: 10px;" ><strong>Copyright©2016 DFSC Center</strong></a> <br/>			
 				
 			</div> 
+</div> 
 	    <script>
 	        let up1=document.getElementById('up1'),
 	            down2=document.getElementById('down2');
