--- a/Member Lin.html
+++ b/Member Lin.html
@@ -140,7 +140,7 @@ date.setTime(date.getTime() - skew)
                                 <!-- <p style="width: 80%;float: right">UK: +44(0)7422 581269<br/></p> -->
                                 <!-- <p style="width: 80%;float: right">CH: +86-18180453935<br/></p> -->
                                 <p style="width: 80%;float: right">E-mail:<br/></p>
-                                <p style="width: 80%;float: right">linzjiang@otmail.com<br/></p>
+                                <p style="width: 80%;float: right">linzjiang@hotmail.com<br/></p>
                                 <p style="width: 80%;float: right">linzhi.jiang@surrey.ac.uk<br/></p>
                                 <p style="width: 80%;float: right">WWW:<br/></p>
                                 <p style="width: 80%;float: right">https://ruizhian.github.io/TeamWeb/<br/></p>
