--- a/CSAC-2019.html
+++ b/CSAC-2019.html
@@ -9,15 +9,15 @@
     <link href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     -->
-    <script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
-    <link href="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="js/2.1.1/jquery.min.js"></script>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <script src="js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="style.css"/>
-    <link rel="stylesheet" href="introduction.css"/>
+    <link rel="stylesheet" href="introduction-CSAC-2020.css"/>
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
-    <script src="https://unpkg.com/scrollreveal"></script>
+    <!--    <script src="https://unpkg.com/scrollreveal"></script>-->
     <title>CSAC-2019</title>
-	<style type="text/css">
+    <style type="text/css">
 	.navbar-collapse li ul{
 			display:none;
 			height:auto;
@@ -31,49 +31,54 @@
 	.navbar-collapse li:hover ul{
 			display:block;
 		}
+	 .section{
+		 margin: 0 22%;
+	    }
 	</style>
 </head>
+
 <body background="image/会议背景11.jpg">
-    <div >
-        <header style="min-height: 76px;">
-                <nav id="main-nav" class="navbar navbar-inverse" role="navigation">
-                    <div class="container">
-                        <div class="navbar-header">
-                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
-                                <span class="sr-only">切换导航</span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                            </button>
-                       <!--     <a class="navbar-brand" href="index.html"><img alt="安全多方计算国际论坛-2019" src="image/logo.png"></a> -->
-                        </div>
-                        <div id="navbar-collapse" class="collapse navbar-collapse">
-                            <ul class="nav navbar-nav navbar-center">
-                                    <li><a href="index.html">
-                                    <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
-                               <li class="submenu">
+<div >
+    <header style="min-height: 76px;">
+        <nav id="main-nav" class="navbar navbar-inverse" role="navigation">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+                        <span class="sr-only">切换导航</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <!--                             <a class="navbar-brand" href="index.html"><img alt="安全多方计算国际论坛-2019" src="image/SHDIpic.PNG"></a>  -->
+                </div>
+                <div id="navbar-collapse" class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav navbar-center">
+                        <li><a href="index.html">
+                            <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
+                             <li class="submenu">
                                     <a href="News.html">News</a>
                                 </li>
                                 <li class="submenu">
 				<a href="Conference.html">Conferences</a>
 			</li>
-                                 <li class="submenu">
-                                    <a href="Training-Camp.html">Training Camp</a>
-                                </li>
-                                <li class="submenu">
-                                    <a href="Research.html">Research</a>
-                                </li>
-				<li class="submenu">
-                                    <a href="About us Introduction.html">About us</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div><!-- /.container-->
-                </nav>
-        </header>    
-        <div id="introdution">
-            <div class="introdution">
+                        <li class="submenu">
+                            <a href="Training-Camp.html">Training Camp</a>
+                        </li>
+                        <li class="submenu">
+                               <a href="Research.html">Research</a>
+                         </li>
+			 <li class="submenu">
+                               <a href="About us Introduction.html">About us</a>
+                        </li>
+                    </ul>
+                </div>
+            </div><!-- /.container-->
+        </nav>
+    </header>
+    <div id="introdution">
+        <div class="introdution">
             <div id="theme">
+                <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p>
                 <p style="text-indent:2em；line-height:150%;">国际网络安全受到的威胁越来越严重，网络空间安全的形势变得异常严峻。密码学作为实现网络空间安全保障的重要支柱，对网络空间安全基础保障的作用更加突出。<br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;网络空间安全与应用密码学国际研讨会将就密码应用的相关问题，展开探讨和交流。本届会议将于2019年09月21日-2019年09月22日在杭州举行，由北京航空航天大学 网络空间安全学院承办。会议将邀请海内外在相关领域研究成果杰出的10位教授就相关问题给出10个特邀报告，每个特邀报告的时间为50分钟。热烈欢迎各位莅临研讨会指导和交流。
                     &nbsp; &nbsp; &nbsp; &nbsp;<br/>
