--- a/SMPC-2019.html
+++ b/SMPC-2019.html
@@ -9,15 +9,15 @@
     <link href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     -->
-    <script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
-    <link href="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.bootcss.com/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="js/2.1.1/jquery.min.js"></script>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <script src="js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="style.css"/>
-    <link rel="stylesheet" href="introduction.css"/>
+    <link rel="stylesheet" href="introduction-CSAC-2020.css"/>
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
-    <script src="https://unpkg.com/scrollreveal"></script>
-    <title>introduction</title>
-	<style type="text/css">
+    <!--    <script src="https://unpkg.com/scrollreveal"></script>-->
+    <title>DSPP-2019</title>
+    <style type="text/css">
 	.navbar-collapse li ul{
 			display:none;
 			height:auto;
@@ -31,49 +31,54 @@
 	.navbar-collapse li:hover ul{
 			display:block;
 		}
+	 .section{
+		 margin: 0 22%;
+	    }
 	</style>
 </head>
+
 <body background="image/会议背景11.jpg">
-    <div >
-        <header style="min-height: 76px;">
-                <nav id="main-nav" class="navbar navbar-inverse" role="navigation">
-                    <div class="container">
-                        <div class="navbar-header">
-                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
-                                <span class="sr-only">切换导航</span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                            </button>
-                       <!--     <a class="navbar-brand" href="index.html"><img alt="安全多方计算国际论坛-2019" src="image/logo.png"></a> -->
-                        </div>
-                        <div id="navbar-collapse" class="collapse navbar-collapse">
-                            <ul class="nav navbar-nav navbar-center">
-                                    <li><a href="index.html">
-                                    <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
-                               <li class="submenu">
+<div >
+    <header style="min-height: 76px;">
+        <nav id="main-nav" class="navbar navbar-inverse" role="navigation">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+                        <span class="sr-only">切换导航</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <!--                             <a class="navbar-brand" href="index.html"><img alt="安全多方计算国际论坛-2019" src="image/SHDIpic.PNG"></a>  -->
+                </div>
+                <div id="navbar-collapse" class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav navbar-center">
+                        <li><a href="index.html">
+                            <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
+                             <li class="submenu">
                                     <a href="News.html">News</a>
                                 </li>
                                 <li class="submenu">
 				<a href="Conference.html">Conferences</a>
 			</li>
-                                 <li class="submenu">
-                                    <a href="Training-Camp.html">Training Camp</a>
-                                </li>
-                                <li class="submenu">
-                                    <a href="Research.html">Research</a>
-                                </li>
-				<li class="submenu">
-                                    <a href="About us Introduction.html">About us</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div><!-- /.container-->
-                </nav>
-        </header>    
-        <div id="introdution">
-            <div class="introdution">
+                        <li class="submenu">
+                            <a href="Training-Camp.html">Training Camp</a>
+                        </li>
+                        <li class="submenu">
+                               <a href="Research.html">Research</a>
+                         </li>
+			 <li class="submenu">
+                               <a href="About us Introduction.html">About us</a>
+                        </li>
+                    </ul>
+                </div>
+            </div><!-- /.container-->
+        </nav>
+    </header>
+    <div id="introdution">
+        <div class="introdution">
             <div id="theme">
+                <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p>
                 <p style="text-indent:2em ">安全多方计算是实现用户隐私保护计算的重要途径，也是网络空间安全研究的热点。本届论坛旨在聚集国内外从事安全多方计算的一批学者，就安全多方计算的研究现状、未来及应用展开交流和讨论。论坛将邀请国内外12位从事安全多方计算的学者。每位邀请的报告人将做40分钟的论坛邀请报告。<br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;报告的主题主要涉及以下几个方面：<br/>
                     &nbsp; &nbsp; &nbsp; &nbsp;(1) 安全多方计算的理论研究及其进展<br/>
