--- a/CSAC-2019.html
+++ b/CSAC-2019.html
@@ -124,6 +124,80 @@
                     <p align="left">会议报告地点：北京航空航天大学 杭州研究院 报告厅（浙江省杭州市滨江区创慧街18号）。<br/></p>  
 			</div>
                                         </div>
+		    <div id="contents" class="personnel2">
+                    <p align="center" class="organization">会议组委会(排名不分先后顺序)<br/></p>
+                    <p align="center">来学嘉&nbsp&nbsp王&emsp;杰&nbsp&nbsp裴定一&nbsp&nbsp陈克非&nbsp&nbsp吴文玲&nbsp&nbsp杨义先&nbsp&nbsp温巧燕&nbsp&nbsp谷大武&nbsp&nbsp林东岱&nbsp&nbsp李&emsp;晖&nbsp&nbsp毛文波<br/></p>
+                    <p align="center">冯荣权&nbsp&nbsp戚文峰&nbsp&nbsp张卫明&nbsp&nbsp马建峰&nbsp&nbsp徐茂智&nbsp&nbsp刘胜利&nbsp&nbsp张方国&nbsp&nbsp徐秋亮&nbsp&nbsp张福泰&nbsp&nbsp李凤华&nbsp&nbsp杨&emsp;波<br/></p> 
+                    <p align="center">任&emsp;奎&nbsp&nbsp胡&emsp;磊&nbsp&nbsp许春香&nbsp&nbsp唐韶华&nbsp&nbsp郑&emsp;东&nbsp&nbsp王良民&nbsp&nbsp李丽香&nbsp&nbsp赵&emsp;波&nbsp&nbsp吴&emsp;铤&nbsp&nbsp祝烈煌&nbsp&nbsp路荣幸<br/></p> 
+                    <p align="center">王美琴&nbsp&nbsp翁&emsp;健&nbsp&nbsp陈晓峰&nbsp&nbsp伍前红&nbsp&nbsp黄欣沂&nbsp&nbsp孔凡玉&nbsp&nbsp吕继强&nbsp&nbsp刘&emsp;哲&nbsp&nbsp屈龙江&nbsp&nbsp石文昌&nbsp&nbsp禹&emsp;勇<br/></p>
+                    <br/><br/>
+                    <p align="center" class="organization">会议主席<br/></p>
+                    <!--                        蒋林智（University of Surrey）林璟锵<br/><br/>-->
+                    <p align="center">刘建伟（北京航空航天大学）<br/></p>
+                    <br/>
+					<p align="center" class="organization">会议程序委员会主席<br/></p>
+					<p align="center">蒋林智（University of Surrey）<br/></p>
+					<br/>
+					<p align="center" class="organization">会议程序委员会副主席<br/></p>
+					<p align="center">关振宇 李大伟 （北京航空航天大学）<br/></p>
+					<br/>
+                    <p align="center" class="organization">会议程序委员会<br/></p>
+                         <p align="center">杜晓妮&nbsp&nbsp闫统江&nbsp&nbsp郭富春&nbsp&nbsp刘哲理&nbsp&nbsp蒙威志&nbsp&nbsp张&emsp;兰&nbsp&nbsp于&emsp;佳&nbsp&nbsp罗&emsp;博<br/></p>  
+      <p align="center">李洪伟&nbsp&nbsp王高丽&nbsp&nbsp付安民&nbsp&nbsp田海博&nbsp&nbsp潘彦斌&nbsp&nbsp黎&emsp;琳&nbsp&nbsp李&emsp;剑&nbsp&nbsp丁&emsp;勇<br/></p>
+     <br/>
+		 <div class="section">
+                    <p align="left">会议举办时间：2019年09月21日-09月22日。<br/></p>
+                    <p align="left">会议报到时间：2019年09月20日14:30-18:00，杭州中赢铂金皇冠假日酒店一楼大堂。<br/></p>
+                    <p align="left">会议注册费用：注册费2000元人民币/人。所有参会人员交通和食宿等自理。<br/></p>
+		    <p align="left">注册费缴纳：<br/></p>
+                    <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp户名：杭州畅游会展服务有限公司；<br/></p>
+                    <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp开户行：杭州联合银行祥符支行；<br/></p>
+                    <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp账号：2010 0015 9260 415<br/></p>
+                    <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp缴费时请您注明以下信息：单位、姓名和单位统一社会信用代码。<br/></p>
+                    <p align="left">会议举办地点：北京航空航天大学杭州研究院（浙江省杭州市滨江区创慧街18号）。<br/></p>
+                    <p align="left">会议住宿酒店：杭州中赢铂金皇冠假日酒店一楼大堂（杭州市滨江区春晓路61号）。<br/></p>
+                    <p align="left">会议承办单位：北京航空航天大学 网络空间安全学院<br/></p>
+                    <p align="left">会议协办单位：杭州安恒信息技术股份有限公司、杭州数梦工场科技有限公司和杭州天谷信息科技有限公司。<br/></p>
+                    <p align="left">会议报告地点：北京航空航天大学 杭州研究院 报告厅（浙江省杭州市滨江区创慧街18号）。<br/></p>  
+			</div>
+                                        </div>
+		    <div id="contents" class="personnel3">
+                    <p align="center" class="organization">会议组委会(排名不分先后顺序)<br/></p>
+                    <p align="center">来学嘉&nbsp&nbsp王&emsp;杰&nbsp&nbsp裴定一&nbsp&nbsp陈克非&nbsp&nbsp吴文玲&nbsp&nbsp杨义先&nbsp&nbsp温巧燕&nbsp&nbsp谷大武&nbsp&nbsp林东岱&nbsp&nbsp李&emsp;晖&nbsp&nbsp毛文波<br/></p>
+                    <p align="center">冯荣权&nbsp&nbsp戚文峰&nbsp&nbsp张卫明&nbsp&nbsp马建峰&nbsp&nbsp徐茂智&nbsp&nbsp刘胜利&nbsp&nbsp张方国&nbsp&nbsp徐秋亮&nbsp&nbsp张福泰&nbsp&nbsp李凤华&nbsp&nbsp杨&emsp;波<br/></p> 
+                    <p align="center">任&emsp;奎&nbsp&nbsp胡&emsp;磊&nbsp&nbsp许春香&nbsp&nbsp唐韶华&nbsp&nbsp郑&emsp;东&nbsp&nbsp王良民&nbsp&nbsp李丽香&nbsp&nbsp赵&emsp;波&nbsp&nbsp吴&emsp;铤&nbsp&nbsp祝烈煌&nbsp&nbsp路荣幸<br/></p> 
+                    <p align="center">王美琴&nbsp&nbsp翁&emsp;健&nbsp&nbsp陈晓峰&nbsp&nbsp伍前红&nbsp&nbsp黄欣沂&nbsp&nbsp孔凡玉&nbsp&nbsp吕继强&nbsp&nbsp刘&emsp;哲&nbsp&nbsp屈龙江&nbsp&nbsp石文昌&nbsp&nbsp禹&emsp;勇<br/></p>
+                    <br/><br/>
+                    <p align="center" class="organization">会议主席<br/></p>
+                    <!--                        蒋林智（University of Surrey）林璟锵<br/><br/>-->
+                    <p align="center">刘建伟（北京航空航天大学）<br/></p>
+                    <br/>
+					<p align="center" class="organization">会议程序委员会主席<br/></p>
+					<p align="center">蒋林智（University of Surrey）<br/></p>
+					<br/>
+					<p align="center" class="organization">会议程序委员会副主席<br/></p>
+					<p align="center">关振宇 李大伟 （北京航空航天大学）<br/></p>
+					<br/>
+                    <p align="center" class="organization">会议程序委员会<br/></p>
+                         <p align="center">杜晓妮&nbsp&nbsp闫统江&nbsp&nbsp郭富春&nbsp&nbsp刘哲理&nbsp&nbsp蒙威志&nbsp&nbsp张&emsp;兰&nbsp&nbsp于&emsp;佳&nbsp&nbsp罗&emsp;博<br/></p>  
+      <p align="center">李洪伟&nbsp&nbsp王高丽&nbsp&nbsp付安民&nbsp&nbsp田海博&nbsp&nbsp潘彦斌&nbsp&nbsp黎&emsp;琳&nbsp&nbsp李&emsp;剑&nbsp&nbsp丁&emsp;勇<br/></p>
+     <br/>
+		 <div class="section">
+                    <p align="left">会议举办时间：2019年09月21日-09月22日。<br/></p>
+                    <p align="left">会议报到时间：2019年09月20日14:30-18:00，杭州中赢铂金皇冠假日酒店一楼大堂。<br/></p>
+                    <p align="left">会议注册费用：注册费2000元人民币/人。所有参会人员交通和食宿等自理。<br/></p>
+		    <p align="left">注册费缴纳：<br/></p>
+                    <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp户名：杭州畅游会展服务有限公司；<br/></p>
+                    <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp开户行：杭州联合银行祥符支行；<br/></p>
+                    <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp账号：2010 0015 9260 415<br/></p>
+                    <p align="left">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp缴费时请您注明以下信息：单位、姓名和单位统一社会信用代码。<br/></p>
+                    <p align="left">会议举办地点：北京航空航天大学杭州研究院（浙江省杭州市滨江区创慧街18号）。<br/></p>
+                    <p align="left">会议住宿酒店：杭州中赢铂金皇冠假日酒店一楼大堂（杭州市滨江区春晓路61号）。<br/></p>
+                    <p align="left">会议承办单位：北京航空航天大学 网络空间安全学院<br/></p>
+                    <p align="left">会议协办单位：杭州安恒信息技术股份有限公司、杭州数梦工场科技有限公司和杭州天谷信息科技有限公司。<br/></p>
+                    <p align="left">会议报告地点：北京航空航天大学 杭州研究院 报告厅（浙江省杭州市滨江区创慧街18号）。<br/></p>  
+			</div>
+                                        </div>
                 </div>   
             </div>    
 <div id="main3" >
